# Ai-Mobile-On-Device-Assistant

./: .gitignore  NATIVE_BUILD_GUIDE.md  README.md  build_native.sh  setup_android_env.sh
app_flutter/: README.md  pubspec.yaml
app_flutter/android/app/: build.gradle.kts
app_flutter/android/app/src/main/: AndroidManifest.xml
app_flutter/android/app/src/main/kotlin/com/example/ai_mobile_ondevice_assistant/: MainActivity.kt
app_flutter/lib/: main.dart
app_flutter/lib/screens/: chat_screen.dart
app_flutter/test/: widget_test.dart
docs/: setup_instructions.md
native_modules/android_inference/: CMakeLists.txt  build.gradle
native_modules/android_inference/src/main/cpp/: native-lib.cpp
native_modules/android_inference/src/main/java/com/oedx/inference/: InferenceBridge.kt
scripts/: download_small_model.sh
server_tools/: convert_to_gguf.py  requirements.txt
